# gtkmm-calculator

./: .gitignore  CMakeLists.txt  README.md
src_dir/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
